<resources>
    <string name="app_name">Sign</string>
    <string name="avatar">Avatar</string>
    <string name="finish">Finish</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="name">Имя</string>
    <string name="name2">Фамилия</string>
    <string name="name3">Отчество</string>
    <string name="done">Готово</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>


</resources>